# Jusho

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  builder.py  create_db.py  pyproject.toml  setup.py
example/example1/: main.py  requirements.txt
example/example1/templates/: index.html
jusho/: __about__.py  __init__.py  jusho.py  models.py  organize_data.py
jusho/gateway/: __init__.py  addresses.py  cities.py  insert.py  prefectures.py  utils.py
test/: test.py
tests/: test.py  test_jusho.py
